--- a/web/svelte-admin/src/app.css
+++ b/web/svelte-admin/src/app.css
@@ -259,7 +259,7 @@
   }
 
   .markdown :where(a) {
-    @apply underline underline-offset-2 wrap-break-word text-inherit;
+    @apply underline underline-offset-2 break-words text-inherit;
   }
 
   .markdown :where(strong) {
